fix layout issues

--- a/src/assets/css/basics/_layouts.scss
+++ b/src/assets/css/basics/_layouts.scss
@@ -1,25 +1,71 @@
 .main-layout {
-    display: grid;
-    box-sizing: border-box; 
-    grid-template-columns: $layout-padding 1fr $layout-padding;
-    > * {
-        &:not(.full) {
-            grid-column: 2;
-        }
-        &.full {
-            grid-column: 1 / -1;
-        }
-    };
-    @include for-narrow-layout {
-        @include gtc($narrow-breakpoint - 1px);
-    };
-    @include for-normal-layout {
-        @include gtc($normal-breakpoint);
-    };
+  display: grid;
+  grid-template-columns: 10rem 1fr 10rem;
+  grid-template-rows: auto 1fr auto;
+  height: 100vh;
+  overflow-y: auto; 
 
-    @include for-wide-layout {
-        @include gtc($wide-breakpoint);
-    };
+  .full {
+      grid-column: 1 / -1;
+  }
+
+  & > header {
+    grid-row: 1;
+    grid-column: 1/-1;
+  }
+
+  & > footer {
+    grid-row: 3;
+    grid-column: 1/-1;
+    height: auto;
+  }
+
+   main {
+    display: content;
+    grid-column: 2;
+    grid-row: 2;
+    min-height: 0;
+    height: 100%;
+    overflow-y: auto;
+    -ms-overflow-style: none;
+   }
+//    .main-inner {
+//   grid-column: 2;
+//   min-height: 100%;
+//   display: flex;
+//   flex-direction: column;
+// }
+
+  }
+  main::-webkit-scrollbar { //works on safari and opera
+    display: none;
     
-}
+  }
+
+
+
+// .main-layout {
+//     display: grid;
+//     box-sizing: border-box; 
+//     grid-template-columns: $layout-padding 1fr $layout-padding;
+//     > * {
+//         &:not(.full) {
+//             grid-column: 2;
+//         }
+//         &.full {
+//             grid-column: 1 / -1;
+//         }
+//     };
+//     @include for-narrow-layout {
+//         @include gtc($narrow-breakpoint - 1px);
+//     };
+//     @include for-normal-layout {
+//         @include gtc($normal-breakpoint);
+//     };
+
+//     @include for-wide-layout {
+//         @include gtc($wide-breakpoint);
+//     };
+    
+// }
 
