--- a/src/assets/css/pages/_About.scss
+++ b/src/assets/css/pages/_About.scss
@@ -1,13 +1,13 @@
 .about-container {
-    padding: 10px 20px;
-    height: 100vh;
-    width: 90vw;
-    margin: auto;
+    height: 100%;
+    width: 100%;
     background-color: var(--clr3);
+    padding: 1rem;
     > h1 {
     font-size: 30px;
     line-height: 2;
     color: var(--clr2);
+    
     }
     p {
         font-size: 20px;
@@ -16,7 +16,6 @@
         
     }
 }
-
 
 .about-sub-sections-links-container {
     display: flex;
