--- a/src/assets/css/pages/_ToyIndex.scss
+++ b/src/assets/css/pages/_ToyIndex.scss
@@ -5,6 +5,6 @@
     align-items: center;
     justify-content: start;
     a {
-    margin-block-start: 90px;
+        margin-block-start: calc(var(--filter-height, 0px) + 1.5rem);
     }
 }
